--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
 
+
+
+
+body{
+
+    margin: 5%;
+}
+
+
+h1{
+
+font-family: "Playfair Display", serif;
+font-size: 60px;
+
+}
+
+
+
+h2{
+ font-family: "Cormorant Garamond", serif;
+font-size: 40px;
+
+}
+
+
+h3{
+ font-family: "Source Serif 4", serif;
+font-size: 20px;
+
+}
+
+
+h4{
+     font-family: "Bebas Neue", sans-serif;
+}
+
+
+p{
+     font-family: "arial";
+
+}
+
+.box1 {
+      width: 100px;
+      height: 100px;
+      background-color: #db3434; 
+      border-radius: 8px;         
+    }
+
+
+.box2 {
+      width: 100px;
+      height: 100px;
+      background-color: #347adb; 
+      border-radius: 8px;         
+    }
