--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Afacad:ital,wght@0,400..700;1,400..700&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
 
 body {
   font-family: Arial, sans-serif;
@@ -36,9 +36,10 @@ body {
 
 
 .casting-button {
-  display: inline-block;
+  display: grid;
   border: 1px solid white;
-  border-radius: 999px;
+  padding: 10px 15px;
+  border-radius: 30px;
   color: white;
   background-color: transparent;
   font-family: "Playfair Display", serif;
@@ -51,7 +52,21 @@ body {
 }
 
 
-
+.casting-button2 {
+  display: grid;
+  padding: 10px 15px;
+  border: 1px solid white;
+  border-radius: 999px;
+  color: white;
+  background-color: transparent;
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-size: 13px;
+  text-decoration: none;
+  text-align: center;
+  width: 100px;
+  height: 30px;
+}
 
 
 
@@ -96,7 +111,7 @@ font-size: 120px;
     grid-column: 2 / 4;
     grid-row: 3 / 3;
    color: white;
-   font-family: "Source Serif 4", serif;
+ font-family: "Afacad", sans-serif;
 font-size: 18px;
    
 }
@@ -107,22 +122,11 @@ font-size: 18px;
     grid-column: 2 / 2;
     grid-row: 4 / 4;
    color: white;
-   font-family: "Source Serif 4", serif;
+  font-family: "Afacad", sans-serif;
 font-size: 18px;
    
 }
 
-
-.grid1 p:nth-child(5) {
-    grid-column: 2 / 2;
-    grid-row: 5 / 5;
-   color: white;
-   font-family: "Source Serif 4", serif;
-font-size: 100px;
-font-weight: 600;
-font-style: italic;
-   
-}
 
 
 
@@ -161,7 +165,19 @@ font-style: italic;
     grid-column: 5 / 7;
     grid-row: 3 / 3;
    color: white;
-  font-family: "Source Serif 4", serif;
+  font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+.grid2 a:nth-child(4) {
+    grid-column: 5 / 7;
+    grid-row: 4 / 4;
+   color: white;
+  font-family: "Afacad", sans-serif;
+text-align: center;
+align-self: end;
 font-size: 18px;
    
 }
