--- a/css/casting.css
+++ b/css/casting.css
@@ -45,7 +45,7 @@ body {
     display: grid;
     grid-template-columns: 0.7fr 1fr 1fr 0.3fr 1fr 1fr 0.7fr;
     grid-template-rows: 0.3fr 0.2fr 0.2fr 0.2fr 0.2fr ;
-    height: 200vh;
+    height: 100vh;
     width: 100vw;
     margin: 0;
 }
@@ -81,3 +81,45 @@ font-size: 18px;
    
 }
 
+
+
+
+.grid2 {
+    display: grid;
+    grid-template-columns: 0.7fr 1fr 1fr 0.3fr 1fr 1fr 0.7fr;
+    grid-template-rows: 0.2fr 0.2fr 0.2fr 0.2fr 0.2fr 0.2fr ;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+}
+
+
+.grid2 img:nth-child(1) {
+    grid-column: 2 / 4;
+    grid-row: 2 / 6;
+    height: 100%;
+    width: 100%;
+   
+}
+
+
+.grid2 p:nth-child(2) {
+    grid-column: 5 / 7;
+    grid-row: 2 / 2;
+   color: white;
+   font-family: "Playfair Display", serif;
+font-weight: 600;
+font-style: italic;
+font-size: 64px;
+   
+}
+
+
+.grid2 p:nth-child(3) {
+    grid-column: 5 / 7;
+    grid-row: 3 / 3;
+   color: white;
+  font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
