--- a/css/register.css
+++ b/css/register.css
@@ -36,5 +36,348 @@ body {
 
 
 
+.btn-outline {
+  background-color: black;
+  color: white;
+  border: 1.5px solid white;
+  border-radius: 30px;
+  padding: 10px 30px;
+  font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+  cursor: pointer;
+}
+
+.btn-filled {
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 30px;
+  padding: 10px 30px;
+   font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+  cursor: pointer;
+}
 
 
+
+
+
+
+
+
+
+
+
+.grid1 {
+    display: grid;
+    grid-template-columns: 0.7fr 1fr 1fr 1fr 1fr 1fr 0.7fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    height: 210vh;
+    width: 100vw;
+    margin: 0;
+    gap: 30px;
+}
+
+
+
+.grid1 p:nth-child(1) {
+    grid-column: 2 / 5;
+    grid-row: 2 / 2;
+   color: white;
+   font-family: "Playfair Display", serif;
+font-weight: 600;
+font-style: italic;
+font-size: 64px;
+   
+}
+
+.grid1 p:nth-child(2) {
+    grid-column: 2 / 2;
+    grid-row: 3 / 3;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+
+
+.grid1 p:nth-child(3) {
+    grid-column: 3 / 3;
+    grid-row: 3 / 3;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+.grid1 input:nth-child(4) {
+    grid-column: 2 / 2;
+    grid-row: 4 / 4;
+ 
+    
+   
+}
+
+
+.grid1 input:nth-child(5) {
+    grid-column: 3 / 3;
+    grid-row: 4 / 4;
+ 
+    
+   
+}
+
+
+
+.grid1 p:nth-child(6) {
+    grid-column: 2 / 2;
+    grid-row: 5 / 5;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+
+.grid1 input:nth-child(7) {
+    grid-column: 2 / 5;
+    grid-row: 6 / 6;
+
+    
+   
+}
+
+
+.grid1 p:nth-child(8) {
+    grid-column: 2 / 2;
+    grid-row: 7 / 7;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+.grid1 p:nth-child(9) {
+    grid-column: 3 / 3;
+    grid-row: 7 / 7;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+.grid1 input:nth-child(10) {
+    grid-column: 2 / 2;
+    grid-row: 8 / 8;
+ 
+    
+   
+}
+
+.grid1 input:nth-child(11) {
+    grid-column: 3 / 3;
+    grid-row: 8 / 8;
+  
+   
+}
+
+
+.grid1 p:nth-child(12) {
+    grid-column: 2 / 2;
+    grid-row: 9 / 9;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+
+.grid1 p:nth-child(13) {
+    grid-column: 3 / 3;
+    grid-row: 9 / 9;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+
+.grid1 p:nth-child(14) {
+    grid-column: 4 / 4;
+    grid-row: 9 / 9;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+
+.grid1 input:nth-child(15) {
+    grid-column: 2 / 2;
+    grid-row: 10 / 10;
+
+   
+}
+
+
+
+.grid1 input:nth-child(16) {
+    grid-column: 3 / 3;
+    grid-row: 10 / 10;
+
+   
+}
+
+
+
+.grid1 input:nth-child(17) {
+    grid-column: 4 / 4;
+    grid-row: 10 / 10;
+  
+   
+}
+
+
+.grid1 p:nth-child(18) {
+    grid-column: 2 / 2;
+    grid-row: 11 / 11;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+.grid1 input:nth-child(19) {
+    grid-column: 2 / 4;
+    grid-row: 12 / 12;
+  
+   
+}
+
+
+
+.grid1 p:nth-child(20) {
+    grid-column: 2 / 2;
+    grid-row: 13 / 13;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+.grid1 p:nth-child(21) {
+    grid-column: 4 / 5;
+    grid-row: 13 / 13;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+.grid1 input:nth-child(22) {
+    grid-column: 2 / 4;
+    grid-row: 14 / 14;
+  
+   
+}
+
+
+.grid1 input:nth-child(23) {
+    grid-column: 4 / 6;
+    grid-row: 14 / 14;
+  
+   
+}
+
+
+.grid1 p:nth-child(24) {
+    grid-column: 2 / 2;
+    grid-row: 15 / 15;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+.grid1 p:nth-child(25) {
+    grid-column: 3 / 3;
+    grid-row: 15 / 15;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+.grid1 p:nth-child(26) {
+    grid-column: 4 / 4;
+    grid-row: 15 / 15;
+   color: white;
+   align-self: end;
+    font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+.grid1 input:nth-child(27) {
+    grid-column: 2 / 2;
+    grid-row: 16 / 16;
+  
+   
+}
+
+
+.grid1 input:nth-child(28) {
+    grid-column: 3 / 3;
+    grid-row: 16 / 16;
+  
+   
+}
+
+.grid1 input:nth-child(29) {
+    grid-column: 4 / 4;
+    grid-row: 16 / 16;
+  
+   
+}
+
+.grid1 button:nth-child(30) {
+    grid-column: 4 / 4;
+    grid-row: 18 / 18;
+  
+   
+}
+
+.grid1 button:nth-child(31) {
+    grid-column: 4 / 4;
+    grid-row: 19 / 19;
+  
+   
+}
