--- a/css/register.css
+++ b/css/register.css
@@ -40,11 +40,13 @@ body {
   background-color: black;
   color: white;
   border: 1.5px solid white;
+  list-style: none;
+  text-decoration: none;
+   text-align: center;
   border-radius: 30px;
   padding: 10px 30px;
   font-family: "Afacad", sans-serif;
-font-size: 18px;
-   
+  font-size: 18px;
   cursor: pointer;
 }
 
@@ -52,6 +54,9 @@ font-size: 18px;
   background-color: white;
   color: black;
   border: none;
+   text-decoration: none;
+   text-align: center;
+list-style: none;
   border-radius: 30px;
   padding: 10px 30px;
    font-family: "Afacad", sans-serif;
@@ -368,14 +373,14 @@ font-size: 18px;
    
 }
 
-.grid1 button:nth-child(30) {
+.grid1 a:nth-child(30) {
     grid-column: 4 / 4;
     grid-row: 18 / 18;
   
    
 }
 
-.grid1 button:nth-child(31) {
+.grid1 a:nth-child(31) {
     grid-column: 4 / 4;
     grid-row: 19 / 19;
   
