--- a/css/main.css
+++ b/css/main.css
@@ -181,3 +181,238 @@ align-self: end;
 font-size: 18px;
    
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+
+
+
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  background-color: black;
+  overflow-x: hidden;
+}
+
+ .navbar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 30px 180px;
+            background-color: black;
+        }
+        .logo img {
+            height: 30px;
+        }
+        .nav-links {
+            display: flex;
+            gap: 50px; 
+        }
+        .nav-links a {
+            text-decoration: none;
+            color: white;
+            font-size: 16px;
+         font-family: "Playfair Display", serif;
+         /* font-weight: 600;
+    font-style: italic;
+ */
+
+       
+        }
+
+
+
+.casting-button {
+  display: grid;
+  border: 1px solid white;
+  padding: 10px 15px;
+  border-radius: 30px;
+  color: white;
+  background-color: transparent;
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-size: 13px;
+  text-decoration: none;
+  text-align: center;
+  width: 150px;
+  height: 30px;
+}
+
+
+.casting-button2 {
+  display: grid;
+  padding: 10px 15px;
+  border: 1px solid white;
+  border-radius: 999px;
+  color: white;
+  background-color: transparent;
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-size: 13px;
+  text-decoration: none;
+  text-align: center;
+  width: 100px;
+  height: 30px;
+}
+
+
+
+
+
+
+.grid1 {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr;
+    grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr ;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+}
+
+
+.grid1 img:nth-child(1) {
+    grid-column: 1 / 3;
+    grid-row: 1 / 7;
+    height: 100%;
+    width: 100%;
+   
+}
+
+
+
+.grid1 p:nth-child(2) {
+    grid-column: 1 / 1;
+    grid-row: 2 / 2;
+   color: white;
+   font-family: "Playfair Display", serif;
+font-weight: 600;
+font-style: italic;
+font-size: 24px;
+   
+}
+
+
+
+
+.grid1 p:nth-child(3) {
+    grid-column: 1 / 1;
+    grid-row: 3 / 3;
+   color: white;
+ font-family: "Afacad", sans-serif;
+font-size: 16px;
+   
+}
+
+
+
+.grid1 a:nth-child(4) {
+    grid-column: 1 / 1;
+    grid-row: 4 / 4;
+   color: white;
+  font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+
+
+
+.grid2 {
+    display: grid;
+    grid-template-columns: 0.3fr 0.5fr 0.5fr 0.2fr 0.5fr 0.5fr 0.3fr;
+    grid-template-rows: 0.2fr 0.1fr 0.2fr 0.2fr ;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+}
+
+
+.grid2 img:nth-child(1) {
+    grid-column: 2 / 4;
+    grid-row: 2 / 5;
+    height: 100%;
+    width: 100%;
+   
+}
+
+
+.grid2 p:nth-child(2) {
+    grid-column: 5 / 7;
+    grid-row: 2 / 2;
+   color: white;
+ font-family: "Playfair Display", serif;
+font-size: 30px;
+font-weight: 600;
+font-style: italic;
+   
+}
+
+.grid2 p:nth-child(3) {
+    grid-column: 5 / 7;
+    grid-row: 3 / 3;
+   color: white;
+  font-family: "Afacad", sans-serif;
+font-size: 18px;
+   
+}
+
+
+.grid2 a:nth-child(4) {
+    grid-column: 5 / 7;
+    grid-row: 4 / 4;
+   color: white;
+  font-family: "Afacad", sans-serif;
+text-align: center;
+align-self: end;
+font-size: 18px;
+   
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
