--- a/css/casting.css
+++ b/css/casting.css
@@ -35,16 +35,32 @@ body {
         }
 
 
+          h1{
+
+font-family: "Playfair Display", serif;
+font-style: italic;
+font-size: 190px;
+font-weight: 600;
+
+    }
 
 
+   h2{
+
+font-family: "Playfair Display", serif;
+font-style: italic;
+font-size: 64px;
+font-weight: 600;
+
+    }
 
 
 
 
 .grid1 {
     display: grid;
-    grid-template-columns: 0.7fr 1fr 1fr 0.3fr 1fr 1fr 0.7fr;
-    grid-template-rows: 0.3fr 0.2fr 0.2fr 0.2fr 0.2fr ;
+    grid-template-columns: 0.68fr 1fr 1fr 0.3fr 1fr 1fr 0.68fr;
+    grid-template-rows: 0.12fr 0.15fr 0.2fr 0.2fr 0.2fr ;
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -52,14 +68,11 @@ body {
 
 
 
-.grid1 p:nth-child(1) {
+.grid1 h2:nth-child(1) {
     grid-column: 2 / 3;
     grid-row: 2 / 2;
    color: white;
-   font-family: "Playfair Display", serif;
-font-weight: 600;
-font-style: italic;
-font-size: 64px;
+ 
    
 }
 
@@ -87,7 +100,7 @@ font-size: 18px;
 .grid2 {
     display: grid;
     grid-template-columns: 0.7fr 1fr 1fr 0.3fr 1fr 1fr 0.7fr;
-    grid-template-rows: 0.2fr 0.2fr 0.2fr 0.2fr 0.2fr 0.2fr ;
+    grid-template-rows: 0.12fr 0.2fr 0.2fr 0.2fr 0.2fr 0.2fr ;
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -103,14 +116,11 @@ font-size: 18px;
 }
 
 
-.grid2 p:nth-child(2) {
+.grid2 h2:nth-child(2) {
     grid-column: 5 / 7;
     grid-row: 2 / 2;
    color: white;
-   font-family: "Playfair Display", serif;
-font-weight: 600;
-font-style: italic;
-font-size: 64px;
+  
    
 }
 
