--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,36 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+    h1{
+
+font-family: "Playfair Display", serif;
+font-style: italic;
+font-size: 190px;
+font-weight: 600;
+
+    }
+
+
+   h2{
+
+font-family: "Playfair Display", serif;
+font-style: italic;
+font-size: 64px;
+font-weight: 600;
+
+    }
+
+
+
 .casting-button {
   display: grid;
   border: 1px solid white;
@@ -76,7 +106,7 @@ body {
 .grid1 {
     display: grid;
     grid-template-columns: 1fr 1.2fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.3fr 0.3fr 0.2fr 0.2fr 0.2fr ;
+    grid-template-rows: 0.3fr 0.25fr 0.2fr 0.2fr 0.2fr ;
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -93,7 +123,7 @@ body {
 
 
 
-.grid1 p:nth-child(2) {
+.grid1 h1:nth-child(2) {
     grid-column: 2 / 3;
     grid-row: 2 / 2;
    color: white;
@@ -133,8 +163,8 @@ font-size: 18px;
 
 .grid2 {
     display: grid;
-    grid-template-columns: 0.3fr 0.5fr 0.5fr 0.2fr 0.5fr 0.5fr 0.3fr;
-    grid-template-rows: 0.2fr 0.1fr 0.2fr 0.2fr ;
+    grid-template-columns: 0.34fr 0.5fr 0.5fr 0.2fr 0.5fr 0.5fr 0.34fr;
+    grid-template-rows: 0.2fr 0.1fr 0.1fr 0.1fr 0.2fr   ;
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -150,20 +180,17 @@ font-size: 18px;
 }
 
 
-.grid2 p:nth-child(2) {
+.grid2 h2:nth-child(2) {
     grid-column: 5 / 7;
     grid-row: 2 / 2;
    color: white;
- font-family: "Playfair Display", serif;
-font-size: 30px;
-font-weight: 600;
-font-style: italic;
+ 
    
 }
 
 .grid2 p:nth-child(3) {
     grid-column: 5 / 7;
-    grid-row: 3 / 3;
+    grid-row: 4 / 4;
    color: white;
   font-family: "Afacad", sans-serif;
 font-size: 18px;
@@ -173,7 +200,7 @@ font-size: 18px;
 
 .grid2 a:nth-child(4) {
     grid-column: 5 / 7;
-    grid-row: 4 / 4;
+    grid-row: 5 / 5;
    color: white;
   font-family: "Afacad", sans-serif;
 text-align: center;
